--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/wumanho/dojo/issues"
   },
-  "homepage": "https://github.com/wumanho/dojo#readme"
+  "homepage": "https://github.com/wumanho/dojo#readme",
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
+  }
 }
