--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "FE practice",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/wumanho/dojo#readme",
   "devDependencies": {
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vitest": "^0.22.1"
   }
 }
