--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/wumanho/dojo#readme",
   "devDependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.13",
+    "@babel/generator": "^7.18.13",
+    "@babel/parser": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/traverse": "^7.18.13",
+    "@babel/types": "^7.18.13",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "vitest": "^0.22.1"
