--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/generator": "^7.18.13",
     "@babel/parser": "^7.18.13",
     "@babel/preset-env": "^7.18.10",
+    "@babel/template": "^7.18.10",
     "@babel/traverse": "^7.18.13",
     "@babel/types": "^7.18.13",
     "ts-node": "^10.9.1",
