--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "vitest": "^0.22.1"
+  },
+  "dependencies": {
+    "@babel/helper-module-imports": "^7.18.6"
   }
 }
